--- a/cssmediaquery/style.css
+++ b/cssmediaquery/style.css
@@ -71,6 +71,39 @@ body
     border-radius: 10px;
 }
 
+
+.contentz
+{
+	height: 600px;
+    background: lightblue;
+   
+
+}
+
+.contentz-item:nth-of-type(1)
+{
+	background: blue;
+    width: 33.33%;
+    height: 100%;
+       margin: 10px;
+}
+
+.contentz-item:nth-of-type(2)
+{
+	background: red;
+    width: 33.33%;
+    height: 100%;
+        margin: 10px;
+}
+
+.contentz-item:nth-of-type(3)
+{
+	background: yellow;
+    width: 33.33%;
+    height: 100%;
+       margin: 10px;
+}
+
 /* Extra small devices (phones, 600px and down) */
 @media only screen and (max-width: 665px) {
 
